sfdx-project/force-app/main/default/objects/Callout_Setting__mdt/Callout_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Custom Settings for using with callouts</description>
    <label>Callout Setting</label>
    <pluralLabel>Callout Settings</pluralLabel>
</CustomObject>