sfdx-project/force-app/main/default/objects/Callout_Setting__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>The base URL to perform callouts to. The actual endpoints are built dynamically.</description>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>