sfdx-project/force-app/main/default/objects/Callout_Setting__mdt/fields/Delay_Between_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Delay_Between_Attempts__c</fullName>
    <label>Delay Between Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>