sfdx-project/force-app/main/default/objects/Callout_Setting__mdt/fields/Max_Paged_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Paged_Attempts__c</fullName>
    <label>Max Paged Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>