sfdx-project/force-app/main/default/objects/Callout_Setting__mdt/fields/Max_PagingAggregator_Heap_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_PagingAggregator_Heap_Size__c</fullName>
    <description>Percentage of max heap size to be allotted to the PagingAggregator during paged callouts. If when attempting to instantiate a new callout the PagingAggregator goes beyond this limit, it is instead flushed into a Developer_Log__c and a new one is instantiated in its place.</description>
    <label>Max PagingAggregator Heap Size</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>