sfdx-project/force-app/main/default/objects/Callout_Setting__mdt/validationRules/Avoid_over_30_Max_PagingAggregator_Size.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoid_over_30_Max_PagingAggregator_Size</fullName>
    <active>true</active>
    <description>Max PagingAggregator Heap Size should not go above 30% of total Heap Size. During a single transaction, the PagingAggregator size is doubled in use while writing its contents into a Developer_Log__c before flushing.</description>
    <errorConditionFormula>Max_PagingAggregator_Heap_Size__c &gt; 0.3</errorConditionFormula>
    <errorDisplayField>Max_PagingAggregator_Heap_Size__c</errorDisplayField>
    <errorMessage>Max Paging Aggregator Heap Size should be 30% or lower.</errorMessage>
</ValidationRule>